--- a/.gitignore
+++ b/.gitignore
@@ -8,23 +8,10 @@
 # Do not ignore current project's `.uplugin`.
 !/*.uplugin
 
-# Do not ignore source and config dirs.
+# Do not ignore source, config and content dirs.
 !/Source/**
 !/Config/**
-
-# Ignore plugins - each plugin should have their own version control
-# !/Plugins/**
-# Plugins/Developer/**
-Plugins/
-
-# Only allow .uasset and .umap files from /Content dir.
-# They're tracked by git-lfs, don't forget to track other
-# files if adding them here.
-!/Content/Input/**/*.uasset
-!/Content/ThirdPerson/**/*.uasset
-
-!/Content/Input/**/*.umap
-!/Content/ThirdPerson/**/*.umap
+!/Content/**
 
 # Allow any files from /RawContent dir.
 # Any file in /RawContent dir will be managed by git lfs.
