--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Do not ignore git files in the root of the repo.
 !/.git*
+!/README.md
 
 # Do not ignore current project's `.uplugin`.
 !/*.uplugin
