--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 !/Source/**
 !/Config/**
 !/Content/**
+!/Resources/**
 
 # Allow any files from /RawContent dir.
 # Any file in /RawContent dir will be managed by git lfs.
