--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # Do not ignore git files in the root of the repo.
 !/.git*
 !/README.md
+!/LICENSE
 
 # Do not ignore current project's `.uplugin`.
 !/*.uplugin
