renamed classes to not have 'Base' to reflect no longer abstract

--- a/Config/DefaultSimpleGameplayExperience.ini
+++ b/Config/DefaultSimpleGameplayExperience.ini
@@ -1,2 +1,2 @@
-﻿[CoreRedirects]
-+ClassRedirects=(OldName="/Script/SimpleGameplayExperience.SimplePawnData",NewName="/Script/SimpleGameplayExperience.ExperienceExamplePawnData")
+[/Script/Engine.Engine]
+WorldSettingsClassName=/Script/SimpleGameplayExperience.SimpleExperienceWorldSettings
